# aes_light

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: aes_light.h
src/: CMakeLists.txt  aes.c
tests/: CMakeLists.txt  expansion_keys.c  main.c  tests.h
